--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Hello world</title>
+    <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  </head>
+  <body>
+    <canvas id="canvas" width="1200" height="300"></canvas>
+    <script type="module" src="main.js"></script>
+  </body>
+</html>
